--- a/free-nodes/page-18.htm
+++ b/free-nodes/page-18.htm
@@ -94,6 +94,20 @@
         <div class="col-md-9">
             <!-- welcome -->
             <div class="xcblog-blog-list">
+                                    <div class="welcome xcblog-blog-item" data-date="2024-06-02">
+                        <div class="col-md-3 agileits_welcome_grid_right">
+                            <a href="/free-nodes/2024-6-2-free-clash.htm" class="xcblog-blog-url">
+                                <img src="/uploads/20240228/572cca27916877c289a949f8bee620b0.webp" alt="6月2日→18.3M/S|2024年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接地址" class="img-responsive" />
+                            </a>
+                        </div>
+                        <div class="col-md-9 agileits_welcome_grid_left">
+                            <a href="/free-nodes/2024-6-2-free-clash.htm" class="xcblog-blog-url">
+                                <h3 class="xcblog-blog-title">6月2日→18.3M/S|2024年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接地址</h3>
+                            </a>
+                            <p>这一次的节点更新覆盖了美国、欧洲、日本、加拿大、韩国、香港、新加坡等地区,最高速度可达18.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
+                        </div>
+                        <div class="clearfix"> </div>
+                    </div>
                                     <div class="welcome xcblog-blog-item" data-date="2024-06-01">
                         <div class="col-md-3 agileits_welcome_grid_right">
                             <a href="/free-nodes/2024-6-1-clash-windows.htm" class="xcblog-blog-url">
@@ -220,20 +234,6 @@
                         </div>
                         <div class="clearfix"> </div>
                     </div>
-                                    <div class="welcome xcblog-blog-item" data-date="2024-05-23">
-                        <div class="col-md-3 agileits_welcome_grid_right">
-                            <a href="/free-nodes/2024-5-23-free-clash.htm" class="xcblog-blog-url">
-                                <img src="/uploads/20240228/7fe0a3254708abdaf06a53e4d29ef007.webp" alt="5月23日→22.6M/S|2024年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接地址" class="img-responsive" />
-                            </a>
-                        </div>
-                        <div class="col-md-9 agileits_welcome_grid_left">
-                            <a href="/free-nodes/2024-5-23-free-clash.htm" class="xcblog-blog-url">
-                                <h3 class="xcblog-blog-title">5月23日→22.6M/S|2024年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接地址</h3>
-                            </a>
-                            <p>这一次的节点更新覆盖了日本、欧洲、韩国、加拿大、香港、新加坡、美国等地区,最高速度可达22.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
-                        </div>
-                        <div class="clearfix"> </div>
-                    </div>
                             </div>
             <ul class="pagination"><li><a href="/free-nodes/page-17.htm">&laquo;</a></li> <li><a href="/free-nodes/">1</a></li><li><a href="/free-nodes/page-2.htm">2</a></li><li class="disabled"><span>...</span></li><li><a href="/free-nodes/page-15.htm">15</a></li><li><a href="/free-nodes/page-16.htm">16</a></li><li><a href="/free-nodes/page-17.htm">17</a></li><li class="active"><span>18</span></li><li><a href="/free-nodes/page-19.htm">19</a></li><li><a href="/free-nodes/page-20.htm">20</a></li><li><a href="/free-nodes/page-21.htm">21</a></li><li class="disabled"><span>...</span></li><li><a href="/free-nodes/page-26.htm">26</a></li><li><a href="/free-nodes/page-27.htm">27</a></li> <li><a href="/free-nodes/page-19.htm">&raquo;</a></li></ul>            <!-- //welcome -->
         </div>
@@ -244,16 +244,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2024-7-26-clash-windows.htm" title="7月26日→20.8M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址">7月26日→20.8M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-10-7-node-share.htm" title="10月7日→20M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址">10月7日→20M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-7-20-free-subscribe-node.htm" title="7月20日→21.5M/S|2024年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接地址">7月20日→21.5M/S|2024年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-7-12-free-ssr-node.htm" title="7月12日→20.3M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址">7月12日→20.3M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-5-3-clash-v2ray-ss-ssr.htm" title="5月3日→20.3M/S|2024年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接地址">5月3日→20.3M/S|2024年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-10-18-clash-windows.htm" title="10月18日→19.6M/S|2024年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址，便宜机场推荐">10月18日→19.6M/S|2024年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-4-8-free-node-subscribe.htm" title="4月8日→21.5M/S|2024年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接">4月8日→21.5M/S|2024年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-7-22-free-high-speed-nodes.htm" title="7月22日→21.4M/S|2024年最新免费节点Shadowrocket/Clash/V2ray/SSR订阅链接地址">7月22日→21.4M/S|2024年最新免费节点Shadowrocket/Clash/V2ray/SSR订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-10-1-free-node-subscribe.htm" title="10月1日→21M/S|2024年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接地址">10月1日→21M/S|2024年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-9-10-clash-node-daily-updates.htm" title="9月10日→20.7M/S|2024年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址">9月10日→20.7M/S|2024年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-20-clash-node.htm" title="8月20日→19.9M/S|2024年最新免费节点SSR/V2ray/Clash/Shadowrocket订阅链接地址">8月20日→19.9M/S|2024年最新免费节点SSR/V2ray/Clash/Shadowrocket订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-10-26-free-high-speed-nodes.htm" title="10月26日→19.2M/S|2024年最新免费节点Clash/Shadowrocket/SSR/V2ray订阅链接地址，便宜机场推荐">10月26日→19.2M/S|2024年最新免费节点Clash/Shadowrocket/SSR/V2ray订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-6-11-free-v2ray.htm" title="6月11日→22.9M/S|2024年最新免费节点Clash/Shadowrocket/SSR/V2ray订阅链接地址">6月11日→22.9M/S|2024年最新免费节点Clash/Shadowrocket/SSR/V2ray订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-7-17-node-share.htm" title="7月17日→21.2M/S|2024年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接地址">7月17日→21.2M/S|2024年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-3-28-clash-windows.htm" title="3月28日→22.4M/S|2024年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接">3月28日→22.4M/S|2024年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接</a></li>
                         <li class="py-2"><a href="/free-nodes/2024-10-30-free-shadowrocket-node.htm" title="10月30日→18M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址，便宜机场推荐">10月30日→18M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-4-10-free-clash-subscribe.htm" title="4月10日→22.1M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接">4月10日→22.1M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-14-clash-node-daily-updates.htm" title="8月14日→19.4M/S|2024年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接地址">8月14日→19.4M/S|2024年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-9-3-free-ssr-node.htm" title="9月3日→18.1M/S|2024年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接地址">9月3日→18.1M/S|2024年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接地址</a></li>
                     </ul>
     </div>
 </div>
@@ -265,7 +265,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">25</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
+                <h4><span class="badge" style="float: right;">26</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">31</span> <a href="/date/2024-10/" title="2024-10 归档">2024-10</a></h4>
